--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,35 +1,32 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
-
 name: Java CI with Gradle
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
+    branches:
+      - main
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 11 for x64
-      uses: actions/setup-java@v3
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Java
+      uses: actions/setup-java@v2
       with:
-        java-version: '11'
-        distribution: 'temurin'
-        architecture: x64
+        java-version: '11'  # Adjust the Java version as needed
+        distribution: 'adopt'  # Specify the desired Java distribution (e.g., adopt, temurin)
+
+    - name: Validate Gradle wrapper
+      run: chmod +x ./gradlew && ./gradlew wrapper --gradle-version 7.2
+      working-directory: ./  # Adjust the path to your project directory if necessary
+
     - name: Build with Gradle
-      uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
-      with:
-        arguments: build
+      run: ./gradlew build
+      working-directory: ./  # Adjust the path to your project directory if necessary
+
