--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,10 +23,8 @@ jobs:
         distribution: 'adopt'  # Specify the desired Java distribution (e.g., adopt, temurin)
 
     - name: Validate Gradle wrapper
-      run: chmod +x ./gradlew && ./gradlew wrapper --gradle-version 7.2
-      working-directory: ./  # Adjust the path to your project directory if necessary
-
-    - name: Build with Gradle
-      run: ./gradlew build
-      working-directory: ./  # Adjust the path to your project directory if necessary
-
+      uses: gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
+    - name: Run the Gradle package task
+      uses: gradle/gradle-build-action@749f47bda3e44aa060e82d7b3ef7e40d953bd629
+      with:
+        arguments: -b ci.gradle package
